keypad and rom selector

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
 <resources>
 
   <string name="app_name">AndroidGameBoyEmulator</string>
+    <string name="title_activity_rom_selection">RomSelectionActivity</string>
 
 </resources>
